examples/test/testpolicy9584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9584
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key34: value45
      key46: value39
      key11: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
      podSelector:
        matchLabels:
          key44: value39
          key19: value30
